--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,9 @@
   --secondary-color: #e0b354;
   --dark-grey: #2b2b2b;
   --line-height: 1.5;
-  --h1-size: 30px;
+  --h1-size: 40px;
   --font-weight: 400;
-  --font-s-size: 20px;
+  --font-p-size: 30px;
 }
 
 * {
@@ -13,10 +13,16 @@
 }
 
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   font-weight: var(--font-weight);
-  font-size: var(--font-s-size);
+  font-size: var(--font-p-size);
   line-height: var(--line-height);
+}
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
 h1 {
@@ -24,7 +30,7 @@ h1 {
 }
 
 p {
-  font-size: inherit;
+  font-size: var(--font-p-size);
   line-height: var(--line-height);
 }
 
@@ -144,7 +150,7 @@ a:active {
     font-size: var(--h1-size);
   }
   p {
-    font-size: var(--font-s-size);
+    font-size: var(--font-p-size);
   }
 }
 
@@ -156,8 +162,7 @@ a:active {
   color: white;
   text-decoration: none;
   padding: 10px;
-  border-radius: 3px;
-  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
   transition: 0.9s opacity;
 }
 
@@ -220,4 +225,21 @@ button:focus,
   to {
     transform: translate(100px, 48px);
   }
+}
+
+.contact-main {
+  text-align: center;
+}
+
+#contact-form {
+  display: inline-block;
+  max-width: 300px;
+  margin: 0 auto;
+}
+
+.web {
+  background-color: var(--primary-color);
+  color: white;
+  border-radius: 3px;
+  font-family: 'Roboto Mono', sans-serif;
 }
