--- a/css/style.production.css
+++ b/css/style.production.css
@@ -11,18 +11,24 @@
 }
 
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   font-weight: 400;
-  font-size: 20px;
+  font-size: 30px;
   line-height: 1.5;
 }
 
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
 h1 {
-  font-size: 30px;
+  font-size: 40px;
 }
 
 p {
-  font-size: inherit;
+  font-size: 30px;
   line-height: 1.5;
 }
 
@@ -157,10 +163,10 @@ a:active {
     grid-row: auto / auto;
   }
   h1 {
-    font-size: 30px;
+    font-size: 40px;
   }
   p {
-    font-size: 20px;
+    font-size: 30px;
   }
 }
 
@@ -172,8 +178,7 @@ a:active {
   color: white;
   text-decoration: none;
   padding: 10px;
-  border-radius: 3px;
-  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
   -webkit-transition: 0.9s opacity;
   -o-transition: 0.9s opacity;
   transition: 0.9s opacity;
@@ -187,8 +192,7 @@ button {
   color: white;
   text-decoration: none;
   padding: 10px;
-  border-radius: 3px;
-  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
   -webkit-transition: 0.9s opacity;
   -o-transition: 0.9s opacity;
   transition: 0.9s opacity;
@@ -294,4 +298,21 @@ button:focus,
     -webkit-transform: translate(100px, 48px);
             transform: translate(100px, 48px);
   }
+}
+
+.contact-main {
+  text-align: center;
+}
+
+#contact-form {
+  display: inline-block;
+  max-width: 300px;
+  margin: 0 auto;
+}
+
+.web {
+  background-color: #000;
+  color: white;
+  border-radius: 3px;
+  font-family: 'Roboto Mono', sans-serif;
 }
