--- a/css/style.production.css
+++ b/css/style.production.css
@@ -109,6 +109,8 @@ a:active {
 .grid__item {
  display: inline-block;
  width: 33%;
+ margin: 0px 15px;
+ padding: 0px 5px;
 }
 
 @supports (display: grid) {
@@ -118,8 +120,8 @@ a:active {
    -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
    grid-template-columns: 1fr 1fr 1fr;
    grid-gap: 20px;
-   margin: 0;
-
+   margin: 0px 15px;
+   padding: 0px 5px;
  }
  .grid__item {
    background-color: lightgray;
@@ -309,4 +311,8 @@ button:focus,
   color: white;
   border-radius: 3px;
   font-family: 'Roboto Mono', sans-serif;
+}
+
+.workh1 {
+  text-align: center;
 }
