--- a/css/style.production.css
+++ b/css/style.production.css
@@ -140,16 +140,12 @@ a:active {
 @media all and (min-width: 500px) and (max-width: 750px){
   .grid {
     -ms-grid-columns: 1fr 20px 1fr;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
   }
 }
 @media all and (max-width: 750px) {
   .grid {
     grid-gap: 10px;
-  }
-  .grid__item:last-child {
-    grid-column: auto / auto;
-    grid-row: auto / auto;
   }
   h1 {
     font-size: 40px;
